# hush

./: .gitignore  Anchor.toml  README.md  docker-compose.yml  package.json
circuits/: verification_key.json  withdraw.circom  withdraw.r1cs  withdraw.sym
circuits/withdraw_js/: withdraw.wasm
lib/: deposit.ts  proof.ts  utils.ts
programs/hush/: Cargo.toml
programs/hush/src/: constants.rs  errors.rs  lib.rs  main.rs
programs/hush/src/instructions/: create_pool.rs  deposit.rs  helpers.rs  initialize.rs  mod.rs  withdraw.rs
programs/hush/src/state/: config.rs  deposit.rs  mod.rs  pool.rs  withdraw.rs
programs/hush/src/zk/: verifier.rs  verifying_key.rs
scripts/: build_circuits.sh  compile_circuits.sh  ops.ts  parse_vk_to_rust.js
tests/: hush.ts
ui/: .gitignore  example.env  next.config.ts  package-lock.json  package.json
ui/app/: actions.ts  globals.css  layout.tsx  page.tsx
ui/components/faq/: index.tsx
ui/components/footer/: index.tsx
ui/components/mixer/: Deposit.tsx  index.tsx
ui/components/navbar/: index.tsx
ui/components/pool/: index.tsx
ui/components/statistics/: index.tsx
ui/components/txHistory/: index.tsx
ui/components/wallet/: index.tsx
ui/constants/: index.ts
ui/context/: AppContext.tsx  SolanaWalletContext.tsx
ui/lib/: deposit.ts  proof.ts  utils.ts
ui/lib/program/: idl.json  index.ts  types.ts
ui/prisma/: schema.prisma
ui/prisma/migrations/20250511141023_init/: migration.sql
ui/prisma/migrations/20250513035816_pool_key/: migration.sql
ui/types/: index.ts
