[package]
name = "hush"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hush"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
ark-bn254 = "0.5.0"
ark-serialize = "0.5.0"
groth16-solana = "0.0.3"
solana-poseidon = "2.2.3"
hex = { version = "0.4", default-features = false }
